tests/Tuc/Fixtures/errors/IfWithoutCondition.tuc
tuc parse error test
participants
    GenericService parts

if
